# ViennaStrongType

./: .gitignore  CMakeLists.txt  README.md  VSTY.h  main.cpp  vsty.cpp  vsty.h
include/: VSTY.h
tests/: testlib.cpp
